# StructureFromMotion

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  setup.sh
src/: frame_extractor.cpp  frame_extractor.h  main.cpp
